--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-        <link href="https://fonts.googleapis.com/css?family=Roboto|Open+Sans|Varela+Round|Quicksand" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto|Open+Sans|Quicksand" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
 
         <script src="js/angular.min.js"></script>
