--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             <nav class="header">
                 <div class="container">
-                    <a class="col xs-6 sm-6 md-6 lg-6 xl-6 logo header-content" href="/">
+                    <a class="col xs-6 sm-6 md-6 lg-6 xl-6 logo header-content" href="#">
                         vplayer
                     </a>
 
@@ -55,7 +55,7 @@
                         </div>
 
                         <ul class="menu-content">
-                            <li class="menu-item"><a ng-href="{{ user.href }}">Профиль</a></li>
+                            <li class="menu-item"><a ng-href="{{ user.href }}" target="_blank">Профиль</a></li>
                             <li class="menu-item"><a href ng-click="logout()">Выйти</a></li>
                         </ul>
 
@@ -64,22 +64,22 @@
                 </div>
             </nav>
 
-            <div class="container content">
-                <div class="playlist col xs-12 sm-12 md-8 lg-8 xl-8">
+            <div class="container content" >
+                <ul class="playlist col xs-12 sm-12 md-8 lg-8 xl-8" ng-to-bottom="loadAudio()">
 
-                    <!--<div class="search-container">
+                    <!--<li class="search-container">
                         <form >
                             <input class="search-field" type="text" placeholder="&#128269; Поиск">
                         </form>
-                    </div>-->
+                    </li>-->
 
-                    <div class="song-container" ng-repeat="track in tracks">
+                    <li class="song-container" ng-repeat="track in tracks">
                         <div class="play-button" onclick="">
                             <img class="icon" src="assets/play_glyph.svg" alt="Play">
                         </div>
                         <div class="info-wrapper">
-                            <div class="title">{{ track.title }}</div>
-                            <div class="artist">{{ track.artist }}</div>
+                            <div class="title" ng-bind="track.title"></div>
+                            <div class="artist" ng-bind="track.artist"></div>
                         </div>
                         <div class="progress-wrapper">
                             <div class="cache-progress"></div>
@@ -87,11 +87,17 @@
                         </div>
                         <audio preload="none" id="{{ track.aid }}">
                             <source src="{{ trustURL(track.url) }}" type="audio/mpeg">
-                            {{ track.title + ' - ' + track.artist }}
                         </audio>
-                    </div>
+                    </li>
 
-                </div>
+                    <li class="loader" ng-show="audioLoading">
+                        <div class="spinner">
+                            <div class="outer"></div>
+                            <div class="inner"></div>
+                        </div>
+                    </li>
+
+                </ul>
 
                 <div class="side-menu col xs-hidden sm-hidden md-4 lg-4 xl-4 o-md-8 o-lg-8 o-xl-8">
 
@@ -119,7 +125,7 @@
             </div>
         </div>
 
-        <script src="js/jquery.min.js"></script>
+        <!--<script src="js/jquery.min.js"></script>-->
         <script src="js/app.js"></script>
 
     </body>
