Fixed playing next track after prev ended

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="container content" >
 
                 <ul class="playlist col xs-12 sm-12 md-8 lg-8 xl-8" ng-to-bottom="loadAudio()">
-                    <audio src="" preload="none" ng-player></audio>
+                    <audio src="" preload="auto" ng-player></audio>
                     <!--<li class="search-container">
                         <form >
                             <input class="search-field" type="text" placeholder="&#128269; Поиск">
