--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <input class="menu-switcher" type="checkbox">
                         <div class="menu-underlay">
                             <div class="name xs-invisible">{{ user.firstName + ' ' + user.lastName }}</div>
-                            <img class="avatar" ng-src="{{ user.photoUrl }}" alt="">
+                            <img class="avatar" src="assets/user_thumb.png" ng-src="{{ user.photoUrl }}" alt="">
                         </div>
 
                         <ul class="menu-content">
