Added touch support for volume slider

--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
         <script src="js/svgeezy.min.js"></script>
         <script src="js/slider.js"></script>
         <script src="js/app.js"></script>
+        <script type="text/javascript">
+            document.querySelector('.header').style.width = '100vw';
+        </script>
 
     </body>
 </html>
