Fixed header on iOS devices!

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                         <input class="menu-switcher" type="checkbox">
                         <div class="menu-underlay">
-                            <div class="name xs-invisible">{{ user.firstName + ' ' + user.lastName }}</div>
+                            <div class="name xs-hidden">{{ user.firstName + ' ' + user.lastName }}</div>
                             <img class="avatar" src="assets/user_thumb.png" ng-src="{{ user.photoUrl }}" alt="">
                         </div>
 
